# aguda-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  aguda-M2.md  aguda-M3.md  aguda-M4.md  aguda.c  aguda.grammar  aguda.ll  build.rs  docker-compose.yml  lib.c  lib.ll  main.agu  main.ll
.cargo/: config.toml
src/: aguda_ast.rs  agudaparser.rs  ast.rs  ast_to_text.rs  cli.rs  grammar.lalrpop  lexer.rs  lib.rs  main.rs  parser.rs  rustlr.grammar  rustlr_ast.rs  rustlrparser.rs  utils.rs
src/codegen/: codegen.rs
src/diagnostics/: errors.rs  formatting.rs  hints.rs  mod.rs  warnings.rs
src/errors/: formatting.rs  mod.rs
src/semantic/: declaration_checker.rs  mod.rs  symbol_table.rs  type_checker.rs  variable_checker.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs
test/invalid/64371_function_zero_params/: function_zero_params.agu
test/invalid/64371_missing_do_keyword/: missing_do_keyword.agu
test/invalid/64371_non_assoc_operator/: non_assoc_operator.agu
test/invalid/64371_variable_not_in_scope/: variable_not_in_scope.agu
test/invalid/64371_wrong_num_args/: wrong_num_args.agu
test/valid/: pascals_triangle.agu
test/valid/64371_binary_search/: binary_search.agu
test/valid/64371_bubble_sort/: bubble_sort.agu
test/valid/64371_factorial/: factorial.agu
test/valid/64371_index_of/: index_of.agu
test/valid/64371_largest_prime_factor/: largest_prime_factor.agu
test/valid/64371_pyramid/: pyramid.agu
test/valid/64371_reverse_array/: reverse_array.agu
tests/: compiler_tests.rs  parser_tests.rs
tests/valid/46494_arrays/: arrays.agu
(+391 files in other folders)
