[package]
name = "aguda-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
logos = "0.15.0"
lalrpop-util = "0.22.1"
lazy_static = "1.5.0"
colored = "3.0.0"
clap = { version = "4", features = ["derive"] }
strsim = "0.11.1"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }

[build-dependencies]
lalrpop = "0.22.1"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
rpath = false
lto = false
debug-assertions = true
panic = 'unwind'
overflow-checks = true